tests/integration/snapshots/integration__conformance__n_object_unquoted_key.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{a: "b"}
stdout --- 
<empty>
stderr --- 
error: unexpected character `a`. expected start of a json value
 --> stdin:1:2
  |
1 | {a: "b"}
  |  ^
